@@ -1,6 +1,7 @@
 Change log for Mail::AuthenticationResults
 
 {{$NEXT}}
+  - New method to copy children from 1 object to another
 
 2.20210112 2021-01-12 22:10:28+00:00 UTC
   - Switch to a purely numeric version string
